--- a/IMDB_WS.ipynb
+++ b/IMDB_WS.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "#setting\n",
-    "url='https://www.imdb.com/search/title?title_type=feature&year=2012'\n",
+    "url='https://www.imdb.com/search/title?title_type=feature&year=2012-01-01,2012-12-31&sort=user_rating,asc'\n",
     "next_page_link=''\n",
     "list_=[]\n",
     "list_names=[]\n",
