Modified the web scraping function
After building the data frame for movies' attribute, I find that some of the index do not match the information I wished to get. Therefore, I tried to get the keyword from the text string while finding all text after <p>. This way, the entities obtained is more precise.

--- a/TMDB web scraping.ipynb
+++ b/TMDB web scraping.ipynb
@@ -9,18 +9,19 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def money(year):\n",
     "    list_=list()\n",
-    "    for page in range(1,2):\n",
+    "    for page in range(1,31):\n",
     "        url='https://www.themoviedb.org/discover/movie?language=en&list_style=1&media_type=movie&page='+str(page)+'&primary_release_year=%s&sort_by=popularity.desc&vote_count.gte=0'%year\n",
     "        response = requests.get(url)\n",
     "    \n",
@@ -42,407 +43,32 @@
     "                    results_page = BeautifulSoup(newresponse.content,'lxml')\n",
     "                    movie_name=results_page.find('h2').get_text()\n",
     "                    info=results_page.find('section',{\"class\":'facts left_column'})\n",
-    "                    language=info.find_all('p')[3].get_text()\n",
-    "                    runtime=info.find_all('p')[4].get_text()\n",
-    "                    budget=info.find_all('p')[5].get_text()\n",
-    "                    revenue=info.find_all('p')[6].get_text()\n",
+    "#                     language=info.find_all('p')[3].get_text()\n",
+    "                    find=info.find_all('p')\n",
+    "                    for item in find:\n",
+    "                        if 'Original Language' in item.get_text():\n",
+    "                            language=item.get_text()\n",
+    "                        elif 'Runtime' in item.get_text():\n",
+    "                            runtime=item.get_text()\n",
+    "                        elif 'Budget' in item.get_text():\n",
+    "                            budget=item.get_text()\n",
+    "                        elif 'Revenue' in item.get_text():\n",
+    "                            revenue=item.get_text()\n",
+    "                            \n",
+    "#                     runtime=info.find_all('p')[4].get_text()\n",
+    "#                     budget=info.find_all('p')[5].get_text()\n",
+    "#                     revenue=info.find_all('p')[6].get_text()\n",
+    "\n",
+    "                    date=results_page.find('ul',{\"class\":'releases'}).get_text()\n",
+    "                    pattern=r'\\w+\\s+\\d+,\\s\\d+'\n",
+    "                    string=date\n",
+    "                    match = re.search(pattern, string)\n",
+    "                    release_date=match.group()\n",
+    "\n",
+    "                    list_.append((movie_name,language,runtime,budget,revenue,release_date))\n",
     "                    \n",
-    "                    list_.append((movie_name,language,runtime,budget,revenue))\n",
+    "#                     list_.append((movie_name,language,runtime,budget,revenue,release_date))\n",
     "    return list_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list_2012=money(2012)\n",
-    "len(list_2012)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def name(year):\n",
-    "    name_year=[]\n",
-    "    list_year=money(year)\n",
-    "    for i in range(len(list_year)):\n",
-    "        name_year.append(list_year[i][0])\n",
-    "    return name_year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def language(year):\n",
-    "    language_year=list()\n",
-    "    lang_year_re=list()\n",
-    "    list_year=money(year)\n",
-    "    for i in range(len(list_year)):\n",
-    "        language_year.append(list_year[i][1])\n",
-    "        \n",
-    "    for j in language_year:\n",
-    "        pattern=r' \\w+$'\n",
-    "        match = re.findall(pattern, j)\n",
-    "        lang_year_re.append(match)\n",
-    "    return lang_year_re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def runtime(year):\n",
-    "    runtime_year=list()\n",
-    "    runtime_year_re=list()\n",
-    "    list_year=money(year)\n",
-    "    for i in range(len(money(year))):\n",
-    "        runtime_year.append(money(year)[i][2])\n",
-    "\n",
-    "    for j in runtime_year:\n",
-    "        pattern=r'\\w+ \\w+m$'\n",
-    "        match = re.findall(pattern, j)\n",
-    "        runtime_year_re.append(match)\n",
-    "    return runtime_year_re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def budget(year):\n",
-    "    budget_year=list()\n",
-    "    budget_year_re=list()\n",
-    "    list_year=money(year)\n",
-    "    for i in range(len(list_year)):\n",
-    "        budget_year.append(list_year[i][3])\n",
-    "\n",
-    "    for j in budget_year:\n",
-    "        pattern=r'[$][0-9,.]+'\n",
-    "        match = re.findall(pattern, j)\n",
-    "        budget_year_re.append(match)\n",
-    "    return budget_year_re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def revenue(year):\n",
-    "    revenue_year=list()\n",
-    "    revenue_year_re=list()\n",
-    "    list_year=money(year)\n",
-    "    for i in range(len(list_year)):\n",
-    "        revenue_year.append(list_year[i][4])\n",
-    "\n",
-    "    for j in revenue_year:\n",
-    "        pattern=r'[$][0-9,.]+'\n",
-    "        match = re.findall(pattern, j)\n",
-    "        revenue_year_re.append(match)\n",
-    "    return revenue_year_re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dataframe(year):\n",
-    "    dic_year={'Movie':name(year),\n",
-    "       'Language':language(year),\n",
-    "       'Runtime':runtime(year),\n",
-    "       'Budget':budget(year),\n",
-    "       'Revenue':revenue(year)}\n",
-    "    dfyear=pd.DataFrame.from_dict(dic_year)\n",
-    "    return dfyear"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Movie</th>\n",
-       "      <th>Language</th>\n",
-       "      <th>Runtime</th>\n",
-       "      <th>Budget</th>\n",
-       "      <th>Revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>The Avengers</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 23m]</td>\n",
-       "      <td>[$220,000,000.00]</td>\n",
-       "      <td>[$1,519,557,910.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The Avengers</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 23m]</td>\n",
-       "      <td>[$220,000,000.00]</td>\n",
-       "      <td>[$1,519,557,910.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>The Dark Knight Rises</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 45m]</td>\n",
-       "      <td>[$250,000,000.00]</td>\n",
-       "      <td>[$1,084,939,099.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Django Unchained</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[$100,000,000.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Brave</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 33m]</td>\n",
-       "      <td>[$185,000,000.00]</td>\n",
-       "      <td>[$538,983,207.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Wreck-It Ralph</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 48m]</td>\n",
-       "      <td>[$165,000,000.00]</td>\n",
-       "      <td>[$471,222,889.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Snow White and the Huntsman</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 7m]</td>\n",
-       "      <td>[$170,000,000.00]</td>\n",
-       "      <td>[$396,600,000.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>The Lorax</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 26m]</td>\n",
-       "      <td>[$70,000,000.00]</td>\n",
-       "      <td>[$348,840,316.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>The Hobbit: An Unexpected Journey</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 49m]</td>\n",
-       "      <td>[$250,000,000.00]</td>\n",
-       "      <td>[$1,021,103,568.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Mirror Mirror</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 46m]</td>\n",
-       "      <td>[$85,000,000.00]</td>\n",
-       "      <td>[$183,018,522.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Skyfall</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 23m]</td>\n",
-       "      <td>[$200,000,000.00]</td>\n",
-       "      <td>[$1,108,561,013.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>The Twilight Saga: Breaking Dawn - Part 2</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 55m]</td>\n",
-       "      <td>[$120,000,000.00]</td>\n",
-       "      <td>[$829,000,000.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>The Amazing Spider-Man</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 16m]</td>\n",
-       "      <td>[$215,000,000.00]</td>\n",
-       "      <td>[$752,215,857.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Sexual Chronicles of a French Family</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Hotel Transylvania</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 31m]</td>\n",
-       "      <td>[$85,000,000.00]</td>\n",
-       "      <td>[$358,375,603.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>The Hunger Games</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 22m]</td>\n",
-       "      <td>[$75,000,000.00]</td>\n",
-       "      <td>[$691,210,692.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Prometheus</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[2h 4m]</td>\n",
-       "      <td>[$130,000,000.00]</td>\n",
-       "      <td>[$403,170,142.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>21 Jump Street</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 49m]</td>\n",
-       "      <td>[$42,000,000.00]</td>\n",
-       "      <td>[$201,585,328.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Silent Hill: Revelation 3D</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 34m]</td>\n",
-       "      <td>[$20,000,000.00]</td>\n",
-       "      <td>[$52,302,796.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Madagascar 3: Europe's Most Wanted</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 33m]</td>\n",
-       "      <td>[$145,000,000.00]</td>\n",
-       "      <td>[$746,921,274.00]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Ice Age: Continental Drift</td>\n",
-       "      <td>[ English]</td>\n",
-       "      <td>[1h 28m]</td>\n",
-       "      <td>[$95,000,000.00]</td>\n",
-       "      <td>[$877,244,782.00]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        Movie    Language   Runtime  \\\n",
-       "0                                The Avengers  [ English]  [2h 23m]   \n",
-       "1                                The Avengers  [ English]  [2h 23m]   \n",
-       "2                       The Dark Knight Rises  [ English]  [2h 45m]   \n",
-       "3                            Django Unchained          []        []   \n",
-       "4                                       Brave  [ English]  [1h 33m]   \n",
-       "5                              Wreck-It Ralph  [ English]  [1h 48m]   \n",
-       "6                 Snow White and the Huntsman  [ English]   [2h 7m]   \n",
-       "7                                   The Lorax  [ English]  [1h 26m]   \n",
-       "8           The Hobbit: An Unexpected Journey  [ English]  [2h 49m]   \n",
-       "9                               Mirror Mirror  [ English]  [1h 46m]   \n",
-       "10                                    Skyfall  [ English]  [2h 23m]   \n",
-       "11  The Twilight Saga: Breaking Dawn - Part 2  [ English]  [1h 55m]   \n",
-       "12                     The Amazing Spider-Man  [ English]  [2h 16m]   \n",
-       "13       Sexual Chronicles of a French Family          []        []   \n",
-       "14                         Hotel Transylvania  [ English]  [1h 31m]   \n",
-       "15                           The Hunger Games  [ English]  [2h 22m]   \n",
-       "16                                 Prometheus  [ English]   [2h 4m]   \n",
-       "17                             21 Jump Street  [ English]  [1h 49m]   \n",
-       "18                 Silent Hill: Revelation 3D  [ English]  [1h 34m]   \n",
-       "19         Madagascar 3: Europe's Most Wanted  [ English]  [1h 33m]   \n",
-       "20                 Ice Age: Continental Drift  [ English]  [1h 28m]   \n",
-       "\n",
-       "               Budget              Revenue  \n",
-       "0   [$220,000,000.00]  [$1,519,557,910.00]  \n",
-       "1   [$220,000,000.00]  [$1,519,557,910.00]  \n",
-       "2   [$250,000,000.00]  [$1,084,939,099.00]  \n",
-       "3                  []    [$100,000,000.00]  \n",
-       "4   [$185,000,000.00]    [$538,983,207.00]  \n",
-       "5   [$165,000,000.00]    [$471,222,889.00]  \n",
-       "6   [$170,000,000.00]    [$396,600,000.00]  \n",
-       "7    [$70,000,000.00]    [$348,840,316.00]  \n",
-       "8   [$250,000,000.00]  [$1,021,103,568.00]  \n",
-       "9    [$85,000,000.00]    [$183,018,522.00]  \n",
-       "10  [$200,000,000.00]  [$1,108,561,013.00]  \n",
-       "11  [$120,000,000.00]    [$829,000,000.00]  \n",
-       "12  [$215,000,000.00]    [$752,215,857.00]  \n",
-       "13                 []                   []  \n",
-       "14   [$85,000,000.00]    [$358,375,603.00]  \n",
-       "15   [$75,000,000.00]    [$691,210,692.00]  \n",
-       "16  [$130,000,000.00]    [$403,170,142.00]  \n",
-       "17   [$42,000,000.00]    [$201,585,328.00]  \n",
-       "18   [$20,000,000.00]     [$52,302,796.00]  \n",
-       "19  [$145,000,000.00]    [$746,921,274.00]  \n",
-       "20   [$95,000,000.00]    [$877,244,782.00]  "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataframe(2012)"
    ]
   },
   {
