--- a/IMDB_WS.ipynb
+++ b/IMDB_WS.ipynb
@@ -183,7 +183,7 @@
     "gross=0\n",
     "\n",
     "#loop\n",
-    "while gross!=0:\n",
+    "while gross!='$0.00M':\n",
     "    response = requests.get(url)\n",
     "    results_page = BeautifulSoup(response.content,'lxml')\n",
     "    \n",
@@ -217,7 +217,7 @@
     "        for datavalue in datavalues:\n",
     "            for y in datavalue.find_all('span',attrs={\"name\":\"nv\"}):\n",
     "                if y.text.startswith('$'):\n",
-    "                    gross=y.get('data-value').text()\n",
+    "                    gross=y.get('data-value')\n",
     "                    list_gross.append(gross)\n",
     "                else:\n",
     "                    votes=y.get('data-value')\n",
