--- a/totten tomatoes.ipynb
+++ b/totten tomatoes.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Get movie name list</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +15,151 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_imdb = pd.read_csv('IMDB.csv')\n",
+    "type(df_imdb['Name'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2686 entries, 0 to 2685\n",
+      "Data columns (total 7 columns):\n",
+      "Unnamed: 0    2686 non-null int64\n",
+      "Name          2686 non-null object\n",
+      "Genre         2686 non-null object\n",
+      "Rating        2686 non-null float64\n",
+      "Votes         2686 non-null int64\n",
+      "BoxOffice     2686 non-null object\n",
+      "Year          2686 non-null int64\n",
+      "dtypes: float64(1), int64(3), object(3)\n",
+      "memory usage: 147.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_imdb.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_list = []\n",
+    "for item in df_imdb.index:\n",
+    "    movie_list.append(df_imdb['Name'][item])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_the = pd.read_csv('the_movie_bd_names.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3780 entries, 0 to 3779\n",
+      "Data columns (total 1 columns):\n",
+      "Movie    3780 non-null object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 29.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_the.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_list2 = []\n",
+    "for item in df_the.index:\n",
+    "    movie_list2.append(df_the['Movie'][item])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_list_combine = []\n",
+    "movie_list_combine = movie_list + [x for x in movie_list2 if x not in movie_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(movie_list_combine)\n",
+    "df.columns=['movie name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "writer = pd.ExcelWriter('Combined movie names.xlsx', engine='xlsxwriter')\n",
+    "\n",
+    "# Convert the dataframe to an XlsxWriter Excel object.\n",
+    "df.to_excel(writer, sheet_name='movie_info')\n",
+    "\n",
+    "# Close the Pandas Excel writer and output the Excel file.\n",
+    "writer.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Scrap data from rotten tomatoes</h2>"
    ]
   },
   {
@@ -238,11 +390,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h2>Combine dataset</h2>"
+   ]
   },
   {
    "cell_type": "code",
