--- a/IMDB_WS.ipynb
+++ b/IMDB_WS.ipynb
@@ -224,12 +224,12 @@
     "                    list_votes.append(votes)\n",
     "        \n",
     "    \n",
-    "    rawgrossvotes=results_page.find_all('span',attrs={\"name\":\"nv\"})\n",
-    "    for row in rawgrossvotes:\n",
-    "        gross=row.get('data-value')\n",
-    "        list_.append(gross)\n",
-    "    list_votes= list_[0:][::2]\n",
-    "    list_gross= list_[1:][::2]\n",
+    "    #rawgrossvotes=results_page.find_all('span',attrs={\"name\":\"nv\"})\n",
+    "    #for row in rawgrossvotes:\n",
+    "       #gross=row.get('data-value')\n",
+    "        #list_.append(gross)\n",
+    "    #list_votes= list_[0:][::2]\n",
+    "    #list_gross= list_[1:][::2]\n",
     "    \n",
     "#Incomplete\n",
     "#rawmeta=results_page.find_all('div',attrs={\"class\":\"inline-block ratings-metascore\"})\n",
