--- a/IMDB_WS.ipynb
+++ b/IMDB_WS.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,7 @@
     "    list_gross=[]\n",
     "    list_votes=[]\n",
     "    list_genre=[]\n",
+    "    list_cert=[]\n",
     "    gross= 'default'\n",
     "    grossdatavalue= 1\n",
     "    \n",
@@ -59,6 +60,8 @@
     "                    list_names.append(x.text)\n",
     "                for y in row.find_all('span',attrs={\"class\":\"genre\"}):\n",
     "                    list_genre.append(y.text.strip())\n",
+    "                for z in row.find_all('span',attrs={\"class\":\"certificate\"}):\n",
+    "                    list_cert.append(y.text.strip())\n",
     "    \n",
     "        rawratings=results_page.find_all('div',attrs={\"class\":\"inline-block ratings-imdb-rating\"})\n",
     "        for row in rawratings:\n",
