--- a/IMDB_WS.ipynb
+++ b/IMDB_WS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,7 @@
     "    list_genre=[]\n",
     "    list_certificate=[]\n",
     "    list_length=[]\n",
+    "    list_year=[year]\n",
     "        \n",
     "    gross=0\n",
     "    \n",
@@ -87,18 +88,9 @@
     "                        votesdatavalue=y.get('data-value')\n",
     "                        list_votes.append(votesdatavalue)\n",
     "                    \n",
-    "        full_list=list(zip(list_names,list_genre,list_ratings,list_votes,list_gross))\n",
+    "        full_list=list(zip(list_names,list_genre,list_ratings,list_votes,list_gross,[year for i in range(0,len(list_names))]))\n",
     "        \n",
     "    return full_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
    ]
   },
   {
@@ -107,23 +99,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year=2012\n",
-    "list_2012=get_ratings_box(year)\n",
-    "year=2013\n",
-    "list_2013=get_ratings_box(year)\n",
-    "year=2014\n",
-    "list_2014=get_ratings_box(year)\n",
-    "year=2015\n",
-    "list_2015=get_ratings_box(year)\n",
-    "year=2016\n",
-    "list_2016=get_ratings_box(year)\n",
-    "year=2017\n",
-    "list_2017=get_ratings_box(year)"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_=[]\n",
+    "for i in range(2012,2018):\n",
+    "    year=i\n",
+    "    list_.append(get_ratings_box(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,25 +125,39 @@
     "rating=[]\n",
     "votes=[]\n",
     "boxoffice=[]\n",
+    "year=[]\n",
+    "    \n",
+    "for i in list_:\n",
+    "    for s in i:\n",
+    "        names.append(s[0])\n",
+    "        genre.append(s[1])\n",
+    "        rating.append(s[2])\n",
+    "        votes.append(s[3])\n",
+    "        boxoffice.append(s[4])\n",
+    "        year.append(s[5])\n",
     "\n",
-    "for i in list_2012:\n",
-    "    names.append(i[0])\n",
-    "    genre.append(i[1])\n",
-    "    rating.append(i[2])\n",
-    "    votes.append(i[3])\n",
-    "    boxoffice.append(i[4])\n",
-    "\n",
-    "dict_={'Name':names,'Genre':genre,'Rating':rating,'Votes':votes,'BoxOffice':boxoffice,'Year':2012}\n",
-    "df_2012=pd.DataFrame(dict_)"
+    "dict_={'Name':names,'Genre':genre,'Rating':rating,'Votes':votes,'BoxOffice':boxoffice,'Year':year}\n",
+    "df=pd.DataFrame(dict_)\n",
+    "df = df.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.reset_index(drop=True)"
+    "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "writer = pd.ExcelWriter('IMDB.xlsx', engine='xlsxwriter')\n",
+    "\n",
+    "# Convert the dataframe to an XlsxWriter Excel object.\n",
+    "df.to_excel(writer, sheet_name='movie_info')\n",
+    "\n",
+    "# Close the Pandas Excel writer and output the Excel file.\n",
+    "writer.save()\n",
+    "\n",
+    "workbook  = writer.book\n",
+    "worksheet = writer.sheets['movie_info']"
    ]
   }
  ],
