--- a/Data_Visualization.ipynb
+++ b/Data_Visualization.ipynb
@@ -10075,7 +10075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10093,33 +10093,78 @@
     "A_Above60=[]\n",
     "A_Above40=[]\n",
     "A_Below40=[]\n",
-    "for i in df['audience_score']:\n",
-    "    if i>= 85:\n",
-    "        A_Above85.append(i)\n",
-    "    elif i<85 and i>= 60:\n",
-    "        A_Above60.append(i)\n",
-    "    elif i<60 and i>= 40:\n",
-    "        A_Above40.append(i)\n",
-    "    elif i< 40 and i>=0:\n",
-    "        A_Below40.append(i)\n",
+    "for i in range(len(df['audience_score'])):\n",
+    "    if df['audience_score'].iloc[i]>= 85:\n",
+    "        a= X_train['BoxOffice'].iloc[i]\n",
+    "        A_Above85.append(a)\n",
+    "    elif df['audience_score'].iloc[i]<85 and df['audience_score'].iloc[i]>= 60:\n",
+    "        a= X_train['BoxOffice'].iloc[i]\n",
+    "        A_Above60.append(a)\n",
+    "    elif df['audience_score'].iloc[i]<60 and df['audience_score'].iloc[i]>= 40:\n",
+    "        a= X_train['BoxOffice'].iloc[i]\n",
+    "        A_Above40.append(a)\n",
+    "    elif df['audience_score'].iloc[i]< 40 and df['audience_score'].iloc[i]>=0:\n",
+    "        a= X_train['BoxOffice'].iloc[i]\n",
+    "        A_Below40.append(a)\n",
     "M_Above85=[]\n",
     "M_Above60=[]\n",
     "M_Above40=[]\n",
     "M_Below40=[]        \n",
-    "for i in df['meter_score']:\n",
-    "    if i>= 85:\n",
-    "        M_Above85.append(i)\n",
+    "for i in range(len(df['meter_score'])):\n",
+    "    if df['meter_score'].iloc[i]>= 85:\n",
+    "        b= X_train['BoxOffice'].iloc[i]\n",
+    "        M_Above85.append(b)\n",
     "    elif i<85 and i>= 60:\n",
-    "        M_Above60.append(i)\n",
+    "        b= X_train['BoxOffice'].iloc[i]\n",
+    "        M_Above60.append(b)\n",
     "    elif i<60 and i>= 40:\n",
-    "        M_Above40.append(i)\n",
+    "        b= X_train['BoxOffice'].iloc[i]\n",
+    "        M_Above40.append(b)\n",
     "    elif i< 40 and i>=0:\n",
-    "        M_Below40.append(i)\n",
-    "        \n",
-    "means_aud = df['audience_score'].mean()\n",
-    "means_met = df['meter_score'].mean()\n",
+    "        b= X_train['BoxOffice'].iloc[i]\n",
+    "        M_Below40.append(b)\n",
+    "A_Above85=sum(A_Above85) / float(len(A_Above85))\n",
+    "A_Above60=sum(A_Above60) / float(len(A_Above60))\n",
+    "A_Above40=sum(A_Above40) / float(len(A_Above40))\n",
+    "A_Below40=sum(A_Below40) / float(len(A_Below40))    \n",
+    "M_Above85=sum(M_Above85) / float(len(M_Above85)) \n",
+    "M_Above60=sum(M_Above85) / float(len(M_Above85)) \n",
+    "M_Above40=[]\n",
+    "M_Below40=[]   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    " \n"
+    "# create plot\n",
+    "fig, ax = plt.subplots()\n",
+    "index = np.arange(n_groups)\n",
+    "bar_width = 0.35\n",
+    "opacity = 0.8\n",
+    " \n",
+    "rects1 = plt.bar(index, means_frank, bar_width,\n",
+    "                 alpha=opacity,\n",
+    "                 color='b',\n",
+    "                 label='meter_score')\n",
+    " \n",
+    "rects2 = plt.bar(index + bar_width, means_guido, bar_width,\n",
+    "                 alpha=opacity,\n",
+    "                 color='g',\n",
+    "                 label='audience_score')\n",
+    " \n",
+    "plt.xlabel('Rating')\n",
+    "plt.ylabel('BoxOffice')\n",
+    "plt.title('Scores by person')\n",
+    "plt.xticks(index + bar_width, ('Above85', 'Above60', 'Above40', 'Below40'))\n",
+    "plt.legend()\n",
+    " \n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    " "
    ]
   }
  ],
